# nil-gate

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  vcpkg-configuration.json  vcpkg.json
cmake/: config.cmake.in  cpack.cmake  package.cmake  pyproject.toml.in  quality.cmake  toolchain.cmake
docs/: 01-start-here.md  02-build-graph-logic.md  03-execute-and-integrate.md  04-extras-and-extension-points.md  05-ffi-lua.md  06-ffi-python.md  07-ffi-other-languages.md
sandbox/: CMakeLists.txt  async.cpp  basic.cpp  c.c  dynamic.cpp  main.lua  main.py  opt.cpp  runner.cpp  uniform.cpp
src/: CMakeLists.txt
src/ffi/lua/: README.md  nil_gate.lua
src/ffi/python/: .gitignore  README.md  __init__.py  build.sh  nil_gate.py  nil_gate.pyi  pyproject.toml  setup.py
src/ffi/python/nil_gate/: __init__.py
src/publish/nil/: gate.h  gate.hpp
src/publish/nil/gate/: Batch.hpp  Core.hpp  Diffs.hpp  Graph.hpp  ICallable.hpp  INode.hpp  IPort.hpp  IRunner.hpp  errors.hpp  types.hpp  uniform_api.hpp
src/publish/nil/gate/api/: uniform.hpp
src/publish/nil/gate/bias/: compatibility.hpp  is_port_type_valid.hpp  nil.hpp  portify.hpp
src/publish/nil/gate/detail/: DataEdge.hpp  DataPort.hpp  Node.hpp  Port.hpp  UNode.hpp  validation.hpp
src/publish/nil/gate/detail/traits/: callable.hpp  node.hpp
src/publish/nil/gate/edges/: Batch.hpp  Compatible.hpp
src/publish/nil/gate/nodes/: Asynced.hpp  Deferred.hpp  Scoped.hpp
src/publish/nil/gate/ports/: Batch.hpp  Compatible.hpp  External.hpp  Mutable.hpp  Port.hpp  ReadOnly.hpp
src/publish/nil/gate/runners/: Async.hpp  AsyncT.hpp  Immediate.hpp  NonBlocking.hpp  Parallel.hpp  SoftBlocking.hpp  boost_asio.hpp  immediate.hpp
src/publish/nil/gate/runners/boost_asio/: Async.hpp  Parallel.hpp  Serial.hpp
src/publish/nil/gate/traits/: compare.hpp  compatibility.hpp  is_edge_type_valid.hpp  is_port_type_valid.hpp  port_override.hpp  portify.hpp
src/src/: PortType.cpp  PortType.hpp  gate.cpp
src/test/: CMakeLists.txt  gate.cpp
src/test/nodes/: Asynced.cpp  Deferred.cpp  Scoped.cpp
src/test/traits/: biased_node.cpp  node.cpp
src/test/traits/biased/: async_outputs.cpp  inputs.cpp  node.cpp  opt_outputs.cpp  req_outputs.cpp  sync_outputs.cpp
src/test/traits/unbiased/: async_outputs.cpp  inputs.cpp  node.cpp  req_outputs.cpp  sync_outputs.cpp
test/traits/: node.cpp
