[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nil-gate"
version = "1.6.6.rc5"
description = "Python binding for nil/gate, a tiny, change-driven DAG library"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = { text = "CC BY-NC-ND 4.0" }
keywords = [
    "nil",
    "gate",
    "DAG",
    "graph"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["nil_gate*"]

[tool.setuptools.package-data]
nil_gate = ["libnil-gate-c-api.so"]
